# grpc_reactor_routeguide

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONAN_USAGE.md  DEVELOPING.md  Dockerfile  GRPC_BUILD_GUIDE.md  LICENSE  NOTICE  README.md  VCPKG_USAGE.md  conandata.yml  conanfile.py  conanfile.txt  markdownlint.yaml  vcpkg-configuration.json  vcpkg.json
.github/docker/: ci.Dockerfile
.github/workflows/: alpine-smoketest.yml  ci-container-explore.yml  ci.yml  cmake-single-platform.yml  static-analysis.yml
applications/blocking/: CMakeLists.txt  route_guide_sync_client.cpp  route_guide_sync_server.cpp
applications/callback/: CMakeLists.txt  route_guide_callback_client.cpp  route_guide_callback_server.cpp
applications/reactor/: CMakeLists.txt  reactor_client.h  reactor_client.md  reactor_client_routeguide.h  reactor_eventloop.h  route_guide_active_reactor_client.cpp  route_guide_proxy_callback_client.cpp
applications/reactor/tests/: CMakeLists.txt  active_bidi_reactor_test.cpp  active_read_reactor_test.cpp  active_unary_reactor_test.cpp  active_write_reactor_test.cpp  client_reactor_integration_test.cpp  route_guide_test_fixture.h
applications/reactor/tests/poc/: CMakeLists.txt  poc_option_a_eventloop.cpp  poc_option_b_sync.cpp
client/: CMakeLists.txt  reactor_client.h  reactor_client.md  reactor_client_routeguide.h  route_guide_callback_client.cpp  route_guide_proxy_callback_client.cpp  route_guide_sync_client.cpp
cmake/: BuildOptimizations.cmake  CompilerCompatibilityCheck.cmake  CompilerLauncher.cmake  ConfigureRPath.cmake  FindGrpcPlugin.cmake  ProtobufGrpcGenerate.cmake  VcpkgAutoDetect.cmake
common/: CMakeLists.txt  api_reactor.h  api_routeguide.h  compat.h  db_utils.cpp  db_utils.h
docker/: Dockerfile.alpine-dev  Dockerfile.alpine-smoketest
docker/smoke-test/: CMakeLists.txt  main.cpp  smoke.proto
docs/: architecture.md  developing.md  documentation.md  grpc-build-guide.md  testing.md  vcpkg-usage.md
proto/: CMakeLists.txt  proto_utils.cpp  proto_utils.h  route_guide_service.h
protobuf_utils/: CMakeLists.txt  protobuf_utils.cpp  protobuf_utils.h
rg_service/: CMakeLists.txt  rg_db.cpp  rg_db.h  rg_logger.cpp  rg_logger.h  rg_utils.cpp  rg_utils.h  route_guide_db.inc  route_guide_db_data.h  route_guide_service.h
server/: CMakeLists.txt  route_guide_callback_server.cpp  route_guide_sync_server.cpp
vcpkg/ports/eventloop/: add-install-rules.patch  portfile.cmake  restrict-languages-cxx.patch  vcpkg.json
vcpkg/ports/glaze/: portfile.cmake  vcpkg.json
vcpkg/ports/grpc/: portfile.cmake  vcpkg.json
vcpkg/toolchains/: ccache-toolchain.cmake
vcpkg/triplets/: x64-linux-clang-release.cmake  x64-linux-clang19-release.cmake  x64-linux-gcc-release.cmake  x64-linux-gcc11-release.cmake  x64-linux-gcc13-release.cmake
